# TMXLib

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README  README.md  TODO
cmake/: Config.cmake  Config.cmake~  Package.cmake~  Targets.cmake  Targets.cmake~
cmake/module/: FindTMX.cmake
doc/: CMakeLists.txt  doxyfile.cmake  index.h
examples/: CMakeLists.txt  CMakeLists.txt~  example.tmx  example.tsx  firstExample.cpp  firstExample.cpp~  iterates.cpp  simpleWrapper.cpp  test.tmx
examples/SFML/: CMakeLists.txt  main.cpp
examples/SFML/ressource/: map.tmx
examples/SFML/src/: map.cpp  tile.cpp  tileset.cpp
include/tmx/: abstractLayer.hpp  compression.hpp  compression.hpp~  data.hpp  data.hpp~  encoding.hpp  encoding.hpp~  image.hpp  image.hpp~  imagelayer.hpp  layer.hpp  layer.hpp~  map.hpp  map.hpp~  object.hpp  object.hpp~  objectgroup.hpp  objectgroup.hpp~  orientation.hpp  orientation.hpp~  point.hpp  point.hpp~  polygon.hpp  polygon.hpp~  polygone.hpp~  polyligne.hpp~  polyline.hpp  polyline.hpp~  properties.hpp  properties.hpp~  tile.hpp  tile.hpp~  tileset.hpp  tileset.hpp~  tmx  tmx~  utils.hpp  utils.hpp~
include/tmx/base64/: base64.hpp
src/tmx/: CMakeLists.txt  data.cpp  data.cpp~  image.cpp  image.cpp~  imagelayer.cpp  layer.cpp  layer.cpp~  map.cpp  map.cpp~  object.cpp  object.cpp~  objectgroup.cpp  objectgroup.cpp~  polygon.cpp  polygon.cpp~  polygone.cpp~  polyline.cpp  polyline.cpp~  properties.cpp  properties.cpp~  tile.cpp  tile.cpp~  tileset.cpp  tileset.cpp~  tmx~  utils.cpp  utils.cpp~
src/tmx/base64/: base64.cpp
test/: CMakeLists.txt  firstTest.cpp  firstTest.cpp~
